--- a/aula16/ex017/ex01.html
+++ b/aula16/ex017/ex01.html
@@ -20,7 +20,9 @@
 
         </div>
         <div id="resp">
-
+            <select name="tabuada" id="seltab" size="10">
+                
+            </select>
         </div>
     </section>
     <footer> 
